# ruOS

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml
config/: CLAUDE.md  mcp.json  ruvultra-csi-bridge.service
config/systemd/: ruos-agent-nightly.service  ruos-agent-nightly.timer  ruos-agent.service  ruos-agent.timer  ruos-llm.service  ruos-update.service  ruos-update.timer
crates/ruos-agent/: Cargo.toml
crates/ruos-agent/src/: aidefence.rs  backfill.rs  eval.rs  llm.rs  main.rs  monitor.rs  ota.rs  profile.rs
crates/ruos-backup/: Cargo.toml
crates/ruos-backup/src/: main.rs
crates/ruos-sensors/: Cargo.toml
crates/ruos-sensors/src/: collectors.rs  consent.rs  main.rs
crates/ruos-voice/: Cargo.toml
crates/ruos-voice/src/: audio.rs  commands.rs  main.rs  tts.rs
docker/: Dockerfile.cross  Dockerfile.test
scripts/: build-agent-deb.sh  build-brain-deb.sh  build-deb.sh  build-desktop-deb.sh  build-embedder-deb.sh  build-embedder-intel-deb.sh  create-bootable-usb.sh  install-claude-code.sh  ruos-bootstrap  ruos-hypertune  ruos-post-install.sh  test-arm64-qemu.sh  test-install.sh
