[package]
name = "ruos-backup"
version = "0.1.0"
edition = "2021"
description = "ruOS auto-backup with incremental snapshots and rollback"

[[bin]]
name = "ruos-backup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
